kuboro/classic_version/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orocommerce-nginx
  labels:
    app: orocommerce-nginx
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: orocommerce-nginx
  selector:
    app: orocommerce-nginx
