kuboro/classic_version/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orocommerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: oro.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orocommerce-nginx
            port:
              number: 80
